# Testpy

./: CONTRIBUTING.md  README.md  humantext.py  pyproject.toml  testpy.toml
.github/repo_resource/: logo.txt
.github/workflows/: ci.yml
docs/: cli.md  commands.md  configuration.md  frameworks.md  future.md  keybindings.md  roadmap.md
src/testpy/: __init__.py  __version__.py  app.py  args.py  cli.py  config.py  error.py  headless.py  tui.py  ui.py
src/testpy/headless/: __init__.py  headless.py
src/testpy/tui/: __init__.py  colors.py  command.py  explore.py  output.py  tui.py  utils.py
tests/: test_app.py  test_args.py  test_config.py
tests/test_utils/: test_config.py  test_utils.py
